--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@shared": ["src/app/shared/index"],
+      "@core": ["src/app/core/index"],
+      "@evn/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
